# claude-stats

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/skills/cs-debug/: SKILL.md
.claude/skills/cs-feature/: SKILL.md
.claude/skills/cs-ready-ship/: SKILL.md
.claude/skills/ready-ship/: SKILL.md
.github/workflows/: release.yml
src/: log.rs  main.rs  session.rs  terminal.rs  ui.rs
