[package]
name = "claude-stats"
version = "0.8.2"
edition = "2021"

[[bin]]
name = "claude-stats"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
fuzzy-matcher = "0.3"
pulldown-cmark = { version = "0.13", default-features = false }
signal-hook = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
